# corp-inventory

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  MANIFEST.in  QC_REVIEW.md  QUICKSTART.md  README.md  pyproject.toml  runtests.py
corp_inventory/: __init__.py  admin.py  app_settings.py  apps.py  auth_hooks.py  managers.py  models.py  signals.py  tasks.py  urls.py  views.py
corp_inventory/management/commands/: diagnose_sync.py  fix_corp_inventory_migration.py
corp_inventory/migrations/: 0001_initial.py  0002_auto_schema_migration.py  0002_empty.py  0003_corporation_wallet_balance.py  0004_containerlog.py  0005_remove_default_permissions.py  0006_clear_snapshot_data.py
corp_inventory/static/corp_inventory/css/: corp_inventory.css
corp_inventory/static/corp_inventory/js/: corp_inventory.js
corp_inventory/templates/corp_inventory/: base.html  container_logs.html  hangar.html  index.html  item_details.html  location.html  logs.html  manage_corporations.html  statistics.html  transactions.html
corp_inventory/tests/: test_models.py
