[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "allianceauth-corp-inventory"
version = "0.1.10"
description = "Alliance Auth app for tracking corporation hangar inventory and transactions"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.0",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
requires-python = ">=3.8"
dependencies = [
    "allianceauth>=3.0.0",
    "django>=4.0",
    "django-esi>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "black",
    "flake8",
    "isort",
]
test = [
    "coverage",
    "django-webtest",
]

[project.urls]
Homepage = "https://github.com/yourusername/allianceauth-corp-inventory"
Source = "https://github.com/yourusername/allianceauth-corp-inventory"
Tracker = "https://github.com/yourusername/allianceauth-corp-inventory/issues"

[tool.setuptools.packages.find]
include = ["corp_inventory*"]

[tool.setuptools.package-data]
corp_inventory = [
    "templates/corp_inventory/*.html",
    "static/corp_inventory/*",
]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
skip_gitignore = true
